@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2016/04/12    1.0.1     Fix support for table headings (thead), offset headings from h3, not h1.
 2016/04/09    1.0.0     Allow table styling based on class, declare plugin stable.
 2016/04/07    0.9.7     Improve table formatting, support boxed text in books.
 2016/02/08    0.9.6     Add support for images when exporting books to Word.
